--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1814,6 +1814,9 @@ a.profilMenu {
     .lessonTitleVdo iframe img {
         width: 100% !important;
     }
+    .unified {
+        width: 100% !important;
+    }
 }
 @media (max-width: 599px){ 
     .chatContact {
@@ -13022,6 +13025,14 @@ a.academy_ul ul li img {
 
 
 /*Added By ankita*/
+.downloadButton {
+    font-weight: 500;
+    float: right;
+    padding: 15px;
+}
+.homeBgDrk .downloadButton{
+    color:#fff;
+}
 .darkTheme ul.insuranceHint3 {
     color:#fff!important;
     background: #404646!important;
@@ -14197,4 +14208,55 @@ input#graduationYear {
 }
 .contact-listitem .contact-listitem-dtls {
     padding: 0 3px 6px !important;
+}
+
+
+.homeBgDrk .ccl-left-panel.active {
+    background-color: #404646 !important;
+}
+.homeBgDrk .ccl-left-panel.active {
+    background-color: #404646 !important;
+    border-color: transparent !important;
+}
+.homeBgDrk .chat-contact-list-ext-wrap div {
+    background-color: #404646 !important;
+}
+.homeBgDrk .contact-listitem .contact-listitem-dtls .contact-listitem-name {
+    color: #D9DADA !important;
+}
+.homeBgDrk .chat-contact-list-ext-wrap .contact-thumbnail-wrap img {
+    border-color: #192020 !important;
+}
+.homeBgDrk .cc1-chat-win-header.clearfix, 
+.homeBgDrk .cc1-chat-win-conver-wrap, 
+.homeBgDrk .cc1-chat-win-inpt-ext-wrap {
+    background-color: #192020 !important;
+    background: #192020 !important;
+}
+.homeBgDrk .unified .ccl-left-panel {
+    background-color: #404646 !important;
+    border-right: #404646 !important;
+}
+.homeBgDrk .cc1-chat-win-inpt-int-wrap .cc1-chat-win-inpt-wrap .cc1-chat-win-inpt-box {
+    background-color: #404646 !important;
+    color: #D9DADA !important;
+}
+.homeBgDrk .cc1-chat-win-inpt-int-wrap span {
+    background-color: #404646 !important;
+}
+.homeBgDrk h6.cc1-chat-win-user-name {
+    color: #D9DADA !important;
+}
+.homeBgDrk .cc1-chat-win-inpt-attach span {
+    border-radius: 9px;
+}
+.homeBgDrk span.cc1-chat-win-inpt-send-btn {
+    background: transparent !important;
+    background-color: transparent !important;
+}
+.homeBgDrk span.cc1-chat-win-timestamp, .homeBgDrk span.cc1-chat-win-timestamp {
+    color: #D9DADA !important;
+}
+.homeBgDrk .cc1-chat-win-header {
+    border-bottom: 1px solid #404646 !important;
 }
